syntax = "proto3";

package vcoa.vnft;

import "cosmos/nft/v1beta1/nft.proto";
import "gogoproto/gogo.proto";

import "vcoa/vnft/class_data.proto";
import "vcoa/vnft/nft_data.proto";

option go_package = "vcoa/x/vnft/types";



// Msg defines the Msg service.
service Msg {
  rpc CreateClass (MsgCreateClass) returns (MsgCreateClassResponse);
  rpc MintNft     (MsgMintNft    ) returns (MsgMintNftResponse    );
  rpc BurnNFT     (MsgBurnNFT    ) returns (MsgBurnNFTResponse    );
}
message MsgCreateClass {
  string creator     = 1;
  string name        = 2;
  string symbol      = 3;
  string description = 4;
  string uri         = 5;
  string uriHash     = 6;
  ClassData data = 7 [(gogoproto.nullable) = false];
}

message MsgCreateClassResponse {
  // cosmos.nft.v1beta1.Class class = 1 [(gogoproto.nullable) = false];
}

message MsgMintNft {
  string creator = 1;
  string classId = 2;
  string id      = 3;
  string uri     = 4;
  string uriHash = 5;
  NftData data = 6 [(gogoproto.nullable) = false];
}

message MsgMintNftResponse {}

message MsgBurnNFT {
  string creator = 1;
  string class_id = 2;
  string nft_id = 3;
}
message MsgBurnNFTResponse {}

